# AcoreImp

./: .gitignore  Acored.kdev4  Makefile  README.md  acoreauth.cpp  acoreworld.cpp  impconfig.cpp  impdb.cpp  impdb.h
.kdev4/: Acored.kdev4
AcoreImp/: CMakeLists.txt  README.md
AcoreImp/src/Imp/: Imp.cpp  ImpConfig.cpp  ImpConfigData.cpp  ImpIO.h  ImpMisc.cpp  ImpMisc.h  Structs.h
Imp/: Enums.h  Global.h  Imp.h  ImpConfig.h  ImpConfigData.h  ImpIO.cpp
